docs/v0.2.0a109/_sources/reference/_autosummary/hpcflow.app.TaskSchema.rst.txt
hpcflow.app.TaskSchema
======================

.. currentmodule:: hpcflow.app

.. autoclass:: TaskSchema
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~TaskSchema.from_json_like
      ~TaskSchema.get_by_key
      ~TaskSchema.get_key
      ~TaskSchema.get_parameter_dependence
      ~TaskSchema.ignore_invalid_actions
      ~TaskSchema.make_persistent
      ~TaskSchema.to_dict
      ~TaskSchema.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TaskSchema.app
      ~TaskSchema.basic_info
      ~TaskSchema.info
      ~TaskSchema.input_types
      ~TaskSchema.name
      ~TaskSchema.output_types
      ~TaskSchema.provides_parameters
      ~TaskSchema.task_template
   
   